Bug fixes to the template generation since it was having formating issues