@@ -2,6 +2,7 @@ package com.codetriage.render;
 
 import com.codetriage.model.FileInfo;
 import com.google.gson.Gson;
+import org.apache.commons.io.IOUtils;
 
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
@@ -19,7 +20,7 @@ public class HtmlRenderer {
             throw new RuntimeException("template.html not found in resources");
         }
 
-        String template = new String (templateStream.readAllBytes(), StandardCharsets.UTF_8);
+        String template = IOUtils.toString(templateStream, StandardCharsets.UTF_8);
         String fileInfoJson = gson.toJson(fileInfos);
 
         return template.replace("{{DOT}}", dot).replace("{{FILE_INFO_JSON}}", fileInfoJson);
